# TocoyMeVoy

./: package.json
.agent/rules/: admin_portal.md  contabilidad_rules.md  django_ui_rules.md  odoo_accounting_logic.md  solenium_identity.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  backup_cajamenor_20260305_233030.sql  cellphones.py  db.sqlite3  docker-compose.yml  justify_admin.md  justify_models.md  list_journals.py  manage.py  pyproject.toml  requirements.txt  run.sh  test_payment_log.json
backend/core/: admin.py  models.py  signals.py  tasks.py  urls.py  views.py
backend/core/management/commands/: load_initial_data.py
backend/core/migrations/: 0001_initial.py  0002_alter_employee_options_alter_invoicesession_options_and_more.py  0003_customuser.py  0004_invoice_and_session_update.py  0005_alter_employee_sheet_name.py  0006_alter_invoice_invoice_date.py  0007_invoice_drive_folder_id_pettyreload.py  0008_employee_monthly_limit_invoice_check_odoo_doc_and_more.py
backend/core/services/: constants.py  employee_service.py  extract_info.py  google_drive.py  google_sheets.py  odoo_client.py  pettyflow_service.py  sheet_navigator.py  whatsapp_utils.py
backend/solenium_project/: celery.py  logging_config.py  settings.py  wsgi.py
factos-master/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
factos-master/api/: urls.py
factos-master/elastic_logging/: apps.py  logger.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  (+1 more)
pettyflow_odoo/: __manifest__.py
(+62 files in other folders)
